community, industries, index how we work and new movie

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
     <div class="video-wrapper inverse-text" data-aos="fade">
       <div class="video-wrapper-inner">
-        <video preload="metadata" poster="style/media/movie.jpg" muted autoplay loop>
-          <source src="style/media/movie.mp4" type="video/mp4">
+        <video preload="metadata" poster="style/media/nextcycle/movie.jpg" muted autoplay loop>
+          <source src="style/media/nextcycle/movie.mp4" type="video/mp4">
         </video>
         <div class="content-overlay">
           <div class="container text-center">
@@ -555,10 +555,46 @@
             <!--/.row -->
           </div>
           <!-- /.container -->
+
+
         </div>
         <!-- /.wrapper -->
        
-
+        <div class="wrapper gray-wrapper">
+          <div class="container inner">
+            <h2 class="section-title mb-40 text-center">From One to Five</h2>
+            <div class="row gutter-50 gutter-md-30 process-wrapper line text-center">
+              <div class="col-md-2 offset-md-1"> <span class="icon icon-blob icon-blob-blue mb-30"><span class="number color-blue">01</span></span>
+                <h5>Kick-off</h5>
+                <p>What are the USP's of the start-up.</p>
+              </div>
+              <!--/column -->
+              <div class="col-md-2"> <span class="icon icon-blob icon-blob-orange mb-30"><span class="number color-orange">02</span></span>
+                <h5>Planning</h5>
+                <p>Formulating a plan for the next:</br>5 years, 4 months, 3 weeks, 2 days, 1 hour.</p>
+              </div>
+              <!--/column -->
+              <div class="col-md-2"> <span class="icon icon-blob icon-blob-pink mb-30"><span class="number color-pink">03</span></span>
+                <h5>Coaching</h5>
+                <p>Coaches available with different expertise.</p>
+              </div>
+              <!--/column -->
+              <div class="col-md-2"> <span class="icon icon-blob icon-blob-green mb-30"><span class="number color-green">04</span></span>
+                <h5>Investors</h5>
+                <p>Connecting to different investors.</p>
+              </div>
+              <!--/column -->
+              <div class="col-md-2"> <span class="icon icon-blob icon-blob-purple mb-30"><span class="number color-purple">05</span></span>
+                <h5>Monitoring</h5>
+                <p>Monitoring progress + investors/startup meetings.</p>
+              </div>
+              <!--/column -->
+            </div>
+            <!--/.row -->
+          </div>
+          <!-- /.container -->
+        </div>
+        <!-- /.wrapper -->
 
    
     <!-- /.wrapper -->
