--- a/industries.html
+++ b/industries.html
@@ -107,25 +107,15 @@
         <!-- /.widget -->
       </div>
 
-      
-      <div class="wrapper gray-wrapper">
-        <div class="container inner">
-          <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-              <h2 class="section-title larger text-center">Industries</h2>
-              <div class="space30"></div>
-              <h1 class="display-4 text-center">Content:  aparte pagina met de 4 thema’s op 1 pagina uitgelegd (next monoliet etc uitdagingen en kansen)</h1>
-              <div class="space30"></div>
-            </div>
+      <div class="wrapper image-wrapper bg-image page-title-wrapper inverse-text" data-image-src="style/images/nextcycle/industries.jpg">
+        <div class="container inner text-center">
+          <div class="space90"></div>
+          <h1 class="page-title">Industries</h1>
+          <p class="lead">Green solutions for a better world.</p>
+        </div>
+        <!-- /.container -->
+      </div>
 
-
-                <h2 class="display-3">We focus on <span class="typer color-default" data-delay="100" data-delim=":" data-words="Next Food:Next Energy:Next Mobility:Next Living"></span><span class="cursor color-default" data-owner="typer"></span> </h2>
-
-            <!-- /column -->
-          </div>
-          <!-- /.row -->
-          </div>
-          </div>
 
           <div class="wrapper white-wrapper">
             <div class="container inner">
