--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">John de Kok</h4>
             <div class="meta mb-5">CEO, Technobis Group</div>
-            <p>‘Passion for doing good by doing great for the world.’</p>
+            <p>Passion for doing good by doing great for the world.</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/jsadekok/" target="_blank"><i class="jam jam-linkedin"></i></a></li>
             </ul>
@@ -232,7 +232,7 @@
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te2.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Cato Bui</h4>
             <div class="meta mb-5">Google, Agency Strategist & Startup Lead</div>
-            <p>‘Improve your branding with a digital strategy’</p></br>
+            <p>Improve your branding with a digital strategy</p></br>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/catobui/" target="_blank"><i class="jam jam-linkedin"></i></a></li>
             </ul>
@@ -244,7 +244,7 @@
             </h4>
             <div class="meta mb-5">Nr. 1 Youtuber in The Netherlands
             </div>
-            <p>‘Social Media xx
+            <p>Social Media xx
             </p></br>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.youtube.com/user/kwebbelkop?hl=nl&gl=NL" target="_blank"><i class="jam jam-youtube"></i></a></li>
@@ -286,7 +286,7 @@
             </h4>
             <div class="meta mb-5">Ceo, Value Connect
             </div>
-            <p>‘Helping companies with Qonnecting Value through management + consulting services’
+            <p>Helping companies with Qonnecting Value through management + consulting services
             </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i class="jam jam-linkedin"></i></a></li>
@@ -298,17 +298,7 @@
 
         <div class="space60"></div>
         <div class="row text-center">
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
-            <h4 class="mb-15">Laurens van Roomen</h4>
-            <div class="meta mb-5">CEO & Entrepreneur</div>
-            <p>xx</p></br>
-            <ul class="social social-s ml-auto">
-              <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i class="jam jam-linkedin"></i></a></li>
-              <li><a href="https://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li>
-            </ul>
-          </div>
-          <!--/column -->
+
           <div class="col-md-4">
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Soufiane Bouarfa
@@ -320,6 +310,31 @@
             </ul>
           </div>
           <!--/column -->
+
+          <div class="col-md-4">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
+            <h4 class="mb-15">Cees Dekker
+            </h4>
+            <div class="meta mb-5">Co-founder SustainableMotion</div>
+            <p>Connecting academic students and graduates with a focus on sustainability with organizations that integrate sustainability in their business activities</p></br>
+            <ul class="social social-s ml-auto">
+              <li><a href="https://www.linkedin.com/in/soufianebouarfa" target="_blank"><i class="jam jam-linkedin"></i></a></li>
+            </ul>
+          </div>
+          <!--/column -->
+
+          <div class="col-md-4">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
+            <h4 class="mb-15">Laurens van Roomen</h4>
+            <div class="meta mb-5">CEO & Entrepreneur</div>
+            <p>xx</p></br>
+            <ul class="social social-s ml-auto">
+              <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i class="jam jam-linkedin"></i></a></li>
+              <li><a href="https://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li>
+            </ul>
+          </div>
+          <!--/column -->
+
           
         </div>
         <!--/.row -->
