--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         <!-- /.wrapper -->
 
 
-        <div class="wrapper image-wrapper bg-image inverse-text" data-image-src="style/images/art/bg10.jpg">
+        <div class="wrapper image-wrapper bg-image inverse-text" data-image-src="style/images/nextcycle/join-community.jpg">
           <div class="container inner pt-80 pb-80">
             <div class="row align-items-center">
               <div class="col-lg-6 order-lg-2 text-center">
@@ -426,15 +426,13 @@
               <div class="space20 d-md-none"></div>
               <div class="space50 d-none d-md-block d-lg-none"></div>
               <div class="col-lg-6 pr-60 pr-md-15">
-                <h2 class="title-bg bg-default color-white">Why Choose Us?</h2>
-                <div class="space10"></div>
-                <h3 class="display-3">So here are a few reasons why our valued customers choose us.</h3>
+                <h3 class="display-3">Are you ready to join the NextCycle Community?</h3>
                 <div class="space20"></div>
                 <div id="accordion-1" class="accordion-wrapper simple">
                   <div class="card">
                     <div class="card-header" id="accordion-heading-1-1">
                       <h5>
-                        <button data-toggle="collapse" data-target="#accordion-collapse-1-1" aria-expanded="true" aria-controls="accordion-collapse-1-1">Money Protection</button>
+                        <button data-toggle="collapse" data-target="#accordion-collapse-1-1" aria-expanded="true" aria-controls="accordion-collapse-1-1">Apply Your Startup</button>
                       </h5>
                     </div>
                     <!-- /.card-header -->
@@ -443,6 +441,7 @@
                         <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                       </div>
                       <!-- /.card-body -->
+                      <a href="#" class="btn btn-white btn-s ml-4 mb-4">Contact us</a>
                     </div>
                     <!-- /.collapse -->
                   </div>
@@ -450,7 +449,7 @@
                   <div class="card">
                     <div class="card-header" id="accordion-heading-1-2">
                       <h5>
-                        <button class="collapsed" data-toggle="collapse" data-target="#accordion-collapse-1-2" aria-expanded="false" aria-controls="accordion-collapse-1-2">Strategic Development</button>
+                        <button class="collapsed" data-toggle="collapse" data-target="#accordion-collapse-1-2" aria-expanded="false" aria-controls="accordion-collapse-1-2">Apply As Coach</button>
                       </h5>
                     </div>
                     <!-- /.card-header -->
@@ -459,6 +458,7 @@
                         <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                       </div>
                       <!-- /.card-body -->
+                      <a href="#" class="btn btn-white btn-s ml-4 mb-4">Contact us</a>
                     </div>
                     <!-- /.collapse -->
                   </div>
@@ -466,7 +466,7 @@
                   <div class="card">
                     <div class="card-header" id="accordion-heading-1-3">
                       <h5>
-                        <button class="collapsed" data-toggle="collapse" data-target="#accordion-collapse-1-3" aria-expanded="false" aria-controls="accordion-collapse-1-3">Marketing Management</button>
+                        <button class="collapsed" data-toggle="collapse" data-target="#accordion-collapse-1-3" aria-expanded="false" aria-controls="accordion-collapse-1-3">Apply As Investor</button>
                       </h5>
                     </div>
                     <!-- /.card-header -->
@@ -475,6 +475,7 @@
                         <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
                       </div>
                       <!-- /.card-body -->
+                      <a href="#" class="btn btn-white btn-s ml-4 mb-4">Contact us</a>
                     </div>
                     <!-- /.collapse -->
                   </div>
