index volgorde + coaches

--- a/about.html
+++ b/about.html
@@ -145,71 +145,7 @@
           <!--/column -->
         </div>
         <!--/.row -->
-        <div class="space100"></div>
-        <div class="row gutter-40">
-          <div class="col-lg-4">
-            <h4>Our Skills</h4>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
-            <ul class="progress-list">
-              <li>
-                <p>Strategy</p>
-                <div class="progressbar line blue" data-value="100"></div>
-              </li>
-              <li>
-                <p>Marketing</p>
-                <div class="progressbar line green" data-value="80"></div>
-              </li>
-              <li>
-                <p>Develepment</p>
-                <div class="progressbar line pink" data-value="85"></div>
-              </li>
-              <li>
-                <p>Data Analysis</p>
-                <div class="progressbar line purple" data-value="90"></div>
-              </li>
-            </ul>
-            <!-- /.progress-list -->
-          </div>
-          <!--/column -->
-          <div class="space30 d-none d-md-block d-lg-none"></div>
-          <div class="col-lg-4">
-            <h4>Why Choose Us?</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet elit. Donec ullamcorper nulla non metus auctor nibh. Nullam id dolor id nibh vehicula euismod.</p>
-            <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Donec sed odio dui. Nullam id dolor id nibh. Fusce dapibus, tellus ac cursus commodo.</p>
-            <ul class="unordered-list">
-              <li>Aenean eu leo quam. Pellentesque ornare.</li>
-              <li>Nullam quis risus eget urna mollis ornare.</li>
-              <li>Donec id elit non mi porta gravida at eget.</li>
-              <li>Fusce dapibus, tellus ac cursus commodo.</li>
-            </ul>
-          </div>
-          <!--/column -->
-          <div class="space30 d-none d-md-block d-lg-none"></div>
-          <div class="col-lg-4">
-            <h4>Our Newsletter</h4>
-            <p>Subscribe to our newsletter to get our latest news and deals delivered right to your inbox!</p>
-            <div class="newsletter-wrapper">
-              <form action="#" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll" class="input-group">
-                  <input type="email" value="" name="EMAIL" class="email form-control mb-0 mr-2 mb-sm-0" id="mce-EMAIL" placeholder="Email Address" required>
-                  <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-rounded btn-blue mr-0 mb-0 pull-right">Join</button>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                    <input type="text" name="b_ddc180777a163e0f9f66ee014_056957de28" tabindex="-1" value="">
-                  </div>
-                  <div class="clearfix"></div>
-                </div>
-              </form>
-            </div>
-            <!-- /.newsletter-wrapper -->
-            <div class="space40"></div>
-            <h4>Get in Touch</h4>
-            <address>Moonshine St. 14/05 Light City,<br class="d-none d-lg-block" /> London, United Kingdom</address>
-            <a href="mailto:first.last@email.com" class="nocolor">info@email.com</a><br /> +00 (128) 456 78 90
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
+       
       </div>
       <!-- /.container -->
 
@@ -218,8 +154,8 @@
         <h3 class="display-3 text-center">Save your time and money <br class="d-none d-lg-block" />by choosing our professional team of coaches.</h3>
         <div class="space40"></div>
         <div class="row text-center">
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
+          <div class="col-md-3">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/nextcycle/coaches/john-de-kok.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">John de Kok</h4>
             <div class="meta mb-5">CEO, Technobis Group</div>
             <p>Passion for doing good by doing great for the world.</p>
@@ -228,17 +164,17 @@
             </ul>
           </div>
           <!--/column -->
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te2.jpg" style="width: 15rem" alt="" /></figure>
+          <div class="col-md-3">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/nextcycle/coaches/cato-bui.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Cato Bui</h4>
-            <div class="meta mb-5">Google, Agency Strategist & Startup Lead</div>
-            <p>Improve your branding with a digital strategy</p></br>
+            <div class="meta mb-5">Agency Strategist & Startup Lead</div>
+            <p>Improve your branding with a digital strategy.</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/catobui/" target="_blank"><i class="jam jam-linkedin"></i></a></li>
             </ul>
           </div>
           <!--/column -->
-          <div class="col-md-4">
+          <div class="col-md-3">
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te3.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Jordi van den Bussche
             </h4>
@@ -251,13 +187,9 @@
             </ul>
           </div>
           <!--/column -->
-        </div>
-        <!--/.row -->
 
-        <div class="space60"></div>
-        <div class="row text-center">
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
+          <div class="col-md-3">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te4.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Wouter Truffino
             </h4>
             <div class="meta mb-5">Ceo, Holland Proptech & Contech
@@ -268,8 +200,14 @@
             </ul>
           </div>
           <!--/column -->
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te2.jpg" style="width: 15rem" alt="" /></figure>
+      </div>
+      <!--/.row -->
+
+        <div class="space60"></div>
+        <div class="row text-center">
+
+          <div class="col-md-3">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Jordy van Egmond</h4>
             <div class="meta mb-5">No. 27 DJ Mag Top 100 DJs list (2014)
             </div>
@@ -279,28 +217,23 @@
             </ul>
           </div>
           <!--/column -->
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te3.jpg" style="width: 15rem" alt="" /></figure>
+          <div class="col-md-3">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te2.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Dr. Ing. Ravish Mehairjan
 
             </h4>
             <div class="meta mb-5">Ceo, Value Connect
             </div>
-            <p>Helping companies with Qonnecting Value through management + consulting services
+            <p>Helping companies through management + consulting services.
             </p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i class="jam jam-linkedin"></i></a></li>
             </ul>
           </div>
           <!--/column -->
-        </div>
-        <!--/.row -->
 
-        <div class="space60"></div>
-        <div class="row text-center">
-
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
+          <div class="col-md-3">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te3.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Soufiane Bouarfa
             </h4>
             <div class="meta mb-5">Entrepreneur Future of Mobility</div>
@@ -311,23 +244,34 @@
           </div>
           <!--/column -->
 
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
+          <div class="col-md-3">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te4.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Cees Dekker
             </h4>
             <div class="meta mb-5">Co-founder SustainableMotion</div>
-            <p>Connecting academic students and graduates with a focus on sustainability with organizations that integrate sustainability in their business activities</p></br>
+            <p>Connecting academic students and graduates with organizations.</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/soufianebouarfa" target="_blank"><i class="jam jam-linkedin"></i></a></li>
             </ul>
           </div>
           <!--/column -->
 
-          <div class="col-md-4">
+
+        </div>
+        <!--/.row -->
+
+        <div class="space60"></div>
+        <div class="row text-center">
+
+
+
+        
+
+          <div class="col-md-3">
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Laurens van Roomen</h4>
             <div class="meta mb-5">CEO & Entrepreneur</div>
-            <p>xx</p></br>
+            <p>xx</p>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i class="jam jam-linkedin"></i></a></li>
               <li><a href="https://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li>
@@ -342,9 +286,6 @@
         <div class="space60"></div>
       </div>
       <!-- /.container -->
-      <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-light-wrapper" preserveAspectRatio="none" viewBox="0 0 1070 20.98">
-        <path d="M0,0V21H1070V0A6830.24,6830.24,0,0,1,0,0Z" /></svg></div>
-  </div>
 
     </div>
     <!-- /.wrapper -->
