--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
           </div>
           <!--/column -->
           <div class="col-md-3">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te3.jpg" style="width: 15rem" alt="" /></figure>
+            <figure class="img-blob blob1 mb-25"><img src="style/images/nextcycle/coaches/jordi-van-den-bussche.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Jordi van den Bussche
             </h4>
             <div class="meta mb-5">Nr. 1 Youtuber in The Netherlands
