footer update and new coach images

--- a/about.html
+++ b/about.html
@@ -218,7 +218,7 @@
           </div>
           <!--/column -->
           <div class="col-md-3">
-            <figure class="img-blob blob8 mb-25"><img src="style/images/art/te2.jpg" style="width: 10rem" alt="" /></figure>
+            <figure class="img-blob blob8 mb-25"><img src="style/images/nextcycle/coaches/ravish-mehairjan.jpg" style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Dr. Ing. Ravish Mehairjan
 
             </h4>
@@ -233,7 +233,7 @@
           <!--/column -->
 
           <div class="col-md-3">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te3.jpg" style="width: 10rem" alt="" /></figure>
+            <figure class="img-blob blob1 mb-25"><img src="style/images/nextcycle/coaches/soufiane-bouarfa.jpg" style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Soufiane Bouarfa
             </h4>
             <div class="meta mb-5">Entrepreneur Future of Mobility</div>
@@ -245,7 +245,7 @@
           <!--/column -->
 
           <div class="col-md-3">
-            <figure class="img-blob blob10 mb-25"><img src="style/images/art/te4.jpg" style="width: 10rem" alt="" /></figure>
+            <figure class="img-blob blob10 mb-25"><img src="style/images/nextcycle/coaches/cees-dekker.jpg" style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Cees Dekker
             </h4>
             <div class="meta mb-5">Co-founder SustainableMotion</div>
@@ -268,7 +268,7 @@
         
 
           <div class="col-md-3">
-            <figure class="img-blob blob8 mb-25"><img src="style/images/art/te1.jpg" style="width: 10rem" alt="" /></figure>
+            <figure class="img-blob blob8 mb-25"><img src="style/images/nextcycle/coaches/laurens-van-roomen.jpg" style="width: 10rem" alt="" /></figure>
             <h4 class="mb-15">Laurens van Roomen</h4>
             <div class="meta mb-5">CEO & Entrepreneur</div>
             <p>xx</p>
@@ -291,10 +291,11 @@
     <!-- /.wrapper -->
    
 
-    <footer class="dark-wrapper inverse-text text-center">
+        <footer class="dark-wrapper inverse-text text-center">
       <div class="container inner pt-80 pb-80">
         <div class="widget"> <img src="#" srcset="style\images\nextcycle\logo-light.png 1x, style\images\nextcycle\logo-light@2x.png 2x" alt="" />
           <div class="space30"></div>
+          <p><a href="mailto:info@nextcycle.com" class="nocolor">info@nextcycle.com</a></p>
           <p>© 2020 NextCycle. All rights reserved.</p>
           <div class="space10"></div>
           <ul class="social social-mute social-s ml-auto">
@@ -303,10 +304,14 @@
             
             <li><a href="#"><i class="jam jam-instagram"></i></a></li>
             <li><a href="#"><i class="jam jam-youtube"></i></a></li>
+
           </ul>
+
         </div>
+
         <!-- /.widget -->
       </div>
+      <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a href="https://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
       <!-- /.container -->
     </footer>
   </div>
