--- a/index.html
+++ b/index.html
@@ -707,10 +707,14 @@
             
             <li><a href="#"><i class="jam jam-instagram"></i></a></li>
             <li><a href="#"><i class="jam jam-youtube"></i></a></li>
+
           </ul>
+
         </div>
+
         <!-- /.widget -->
       </div>
+      <p style="padding-bottom: 0px; margin-bottom: 0px; text-align: right; font-size: small;"><a href="https://www.laurensvanroomen.nl" class="nocolor">Website by Laurens van Roomen</a></p>
       <!-- /.container -->
     </footer>
   </div>
