--- a/index.html
+++ b/index.html
@@ -304,6 +304,42 @@
       <div class="col-lg-7">
         <div class="pricing-wrapper">
           <div class="row no-gutters">
+           
+            <div class="col-md-4">
+              <div class="pricing panel box bg-white shadow">
+                <div class="panel-heading">
+                  <div class="prices color-dark">
+                    <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value">19</span> <span class="price-duration">month</span></div>
+                    <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">199</span> <span class="price-duration">year</span></div> -->
+                    <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
+                  </div>
+                  <h4 class="panel-title mb-0">Accelerate</h4>
+                </div>
+                <!--/.panel-heading -->
+                <div class="panel-body">
+                  <table class="table">
+                    <tr>
+                      <td><strong>Active</strong> Coaching </td>
+                    </tr>
+                    <tr>
+                      <td><strong>5 year</strong> plan development </td>
+                    </tr>
+                    <tr>
+                      <td><strong>Monthly</strong> Feedback </td>
+                    </tr>
+
+
+
+                  </table>
+                </div>
+                <!--/.panel-body -->
+
+                <div class="panel-footer"><a href="#" class="btn" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
+              </div>
+              <!--/.pricing -->
+            </div>
+            <!--/column -->
+
             <div class="col-md-4">
               <div class="pricing panel box bg-white shadow">
                 <div class="panel-heading">
@@ -333,40 +369,7 @@
                   </table>
                 </div>
                 <!--/.panel-body -->
-                <div class="panel-footer"> <a href="#" class="btn" role="button">Contact Us</a></div>
-              </div>
-              <!--/.pricing -->
-            </div>
-            <!--/column -->
-            <div class="col-md-4">
-              <div class="pricing panel box bg-white shadow">
-                <div class="panel-heading">
-                  <div class="prices color-dark">
-                    <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value">19</span> <span class="price-duration">month</span></div>
-                    <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">199</span> <span class="price-duration">year</span></div> -->
-                    <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
-                  </div>
-                  <h4 class="panel-title mb-0">Accelerate</h4>
-                </div>
-                <!--/.panel-heading -->
-                <div class="panel-body">
-                  <table class="table">
-                    <tr>
-                      <td><strong>Active</strong> Coaching </td>
-                    </tr>
-                    <tr>
-                      <td><strong>5 year</strong> plan development </td>
-                    </tr>
-                    <tr>
-                      <td><strong>Monthly</strong> Feedback </td>
-                    </tr>
-
-
-
-                  </table>
-                </div>
-                <!--/.panel-body -->
-                <div class="panel-footer"> <a href="#" class="btn" role="button">Contact Us</a></div>
+                <div class="panel-footer"><a href="#" class="btn" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
               </div>
               <!--/.pricing -->
             </div>
@@ -406,7 +409,7 @@
                   </table>
                 </div>
                 <!--/.panel-body -->
-                <div class="panel-footer"> <a href="#" class="btn" role="button">Contact Us</a></div>
+                <div class="panel-footer"><a href="#" class="btn" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
               </div>
               <!--/.pricing -->
             </div>
@@ -453,11 +456,18 @@
                 <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
               </div>
               <!-- /.card-body -->
-              <a href="#" class="btn btn-white btn-s ml-4 mb-4">Contact us</a>
+
+              <div><a href="#" class="btn btn-white btn-s ml-4 mb-4" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
+              
+
             </div>
             <!-- /.collapse -->
           </div>
           <!-- /.card -->
+
+
+
+
           <div class="card">
             <div class="card-header" id="accordion-heading-1-2">
               <h5>
@@ -470,7 +480,7 @@
                 <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
               </div>
               <!-- /.card-body -->
-              <a href="#" class="btn btn-white btn-s ml-4 mb-4">Contact us</a>
+              <div><a href="#" class="btn btn-white btn-s ml-4 mb-4" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
             </div>
             <!-- /.collapse -->
           </div>
@@ -487,7 +497,7 @@
                 <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
               </div>
               <!-- /.card-body -->
-              <a href="#" class="btn btn-white btn-s ml-4 mb-4">Contact us</a>
+              <div><a href="#" class="btn btn-white btn-s ml-4 mb-4" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
             </div>
             <!-- /.collapse -->
           </div>
@@ -502,6 +512,7 @@
   <!-- /.container -->
 </div>
 <!-- /.wrapper -->
+
 
 
 <div class="wrapper white-wrapper image-wrapper bg-auto no-overlay bg-image text-center" data-image-src="style/images/art/map.png">
@@ -668,7 +679,95 @@
 </div>
 
   
-
+<!--THE CONTACT FORM-->
+<div class="modal fade" id="modal-03" tabindex="-1" role="dialog" aria-labelledby="modal-03" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="container-fluid boxed p-0">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <div class="image-block-wrapper">
+          <div class="image-block col-lg-6">
+            <div class="image-block-bg bg-image" data-image-src="style/images/art/bg23.jpg"></div>
+          </div>
+          <!--/.image-block -->
+          <div>
+            <div class="row no-gutters">
+              <div class="col-lg-6 offset-lg-6">
+                <div class="box p-50 d-flex">
+                  <div class="align-self-center">
+                    <h2 class="section-title mb-30">Get in Touch</h2>
+                    <form id="contact-form" method="post" action="contact/contact.php">
+                      <div class="messages"></div>
+                      <div class="controls">
+                        <div class="form-row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_name" type="text" name="name" class="form-control" placeholder="First Name *" required="required" data-error="First Name is required.">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Last Name *" required="required" data-error="Last Name is required.">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_email" type="email" name="email" class="form-control" placeholder="Email *" required="required" data-error="Valid email is required.">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Phone">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <textarea id="form_message" name="message" class="form-control" placeholder="Message *" rows="4" required="required" data-error="Message is required."></textarea>
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                          <div class="col-md-12">
+                            <input type="submit" class="btn btn-send" value="Send message">
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-12">
+                            <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </form>
+                    <!-- /form -->
+                  </div>
+                  <!-- /div -->
+                </div>
+                <!-- /.box -->
+              </div>
+              <!--/column -->
+            </div>
+            <!--/.row -->
+          </div>
+          <!--/div -->
+        </div>
+        <!--/.image-block-wrapper -->
+      </div>
+      <!--/.boxed -->
+    </div>
+    <!--/.modal-content -->
+  </div>
+  <!--/.modal-dialog -->
+</div>
+<!--/.modal -->
 
 
 
@@ -683,7 +782,7 @@
               <div class="box shadow p-60 image-wrapper bg-full bg-image inverse-text rounded d-md-flex align-items-md-center justify-content-md-between" data-image-src="style/media/nextcycle/movie-top1.jpg">
                 <h3 class="display-3 mb-0">Convinced yet? Let's work together.</h3>
                 <div class="space30 d-md-none"></div>
-                <a href="#" class="btn btn-white btn-strong-hover mb-0">Contact Us</a>
+                <div><a href="#" class="btn btn-white btn-s ml-4 mb-4" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
               </div>
               <!--/.box -->
             </div>
