--- a/about.html
+++ b/about.html
@@ -122,7 +122,9 @@
             <h3 class="display-3">We are a consultancy & business company that believes in the power of collaboration.</h3>
             <div class="space20"></div>
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia.</p>
+            <div class="panel-footer"><a href="#" class="btn btn-s btn-blue" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
             <div class="space20"></div>
+
             <div class="row counter">
               <div class="col-md-4">
                 <h3 class="value">7518</h3>
@@ -141,7 +143,9 @@
               <!--/column -->
             </div>
             <!--/.row -->
+
           </div>
+          
           <!--/column -->
         </div>
         <!--/.row -->
@@ -289,6 +293,96 @@
 
     </div>
     <!-- /.wrapper -->
+
+    <!--THE CONTACT FORM-->
+<div class="modal fade" id="modal-03" tabindex="-1" role="dialog" aria-labelledby="modal-03" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="container-fluid boxed p-0">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <div class="image-block-wrapper">
+          <div class="image-block col-lg-6">
+            <div class="image-block-bg bg-image" data-image-src="style/images/art/bg23.jpg"></div>
+          </div>
+          <!--/.image-block -->
+          <div>
+            <div class="row no-gutters">
+              <div class="col-lg-6 offset-lg-6">
+                <div class="box p-50 d-flex">
+                  <div class="align-self-center">
+                    <h2 class="section-title mb-30">Get in Touch</h2>
+                    <form id="contact-form" method="post" action="contact/contact.php">
+                      <div class="messages"></div>
+                      <div class="controls">
+                        <div class="form-row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_name" type="text" name="name" class="form-control" placeholder="First Name *" required="required" data-error="First Name is required.">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Last Name *" required="required" data-error="Last Name is required.">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_email" type="email" name="email" class="form-control" placeholder="Email *" required="required" data-error="Valid email is required.">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Phone">
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-12">
+                            <div class="form-group">
+                              <textarea id="form_message" name="message" class="form-control" placeholder="Message *" rows="4" required="required" data-error="Message is required."></textarea>
+                              <div class="help-block with-errors"></div>
+                            </div>
+                          </div>
+                          <div class="col-md-12">
+                            <input type="submit" class="btn btn-send" value="Send message">
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="col-md-12">
+                            <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </form>
+                    <!-- /form -->
+                  </div>
+                  <!-- /div -->
+                </div>
+                <!-- /.box -->
+              </div>
+              <!--/column -->
+            </div>
+            <!--/.row -->
+          </div>
+          <!--/div -->
+        </div>
+        <!--/.image-block-wrapper -->
+      </div>
+      <!--/.boxed -->
+    </div>
+    <!--/.modal-content -->
+  </div>
+  <!--/.modal-dialog -->
+</div>
+<!--/.modal -->
    
 
         <footer class="dark-wrapper inverse-text text-center">
