--- a/index.html
+++ b/index.html
@@ -292,11 +292,9 @@
     <div class="row">
       <div class="col-lg-5 pr-50 pr-md-15">
         <h2 class="title-color color-gray">Our Services</h2>
-        <h3 class="display-3">A small heading text that puts down the core things regarding the service we offer.</h3>
+        <h3 class="display-3">Don't miss out on the Next Innovation and Investment Cycle by making use of the services that we offer.</h3>
         <div class="space20"></div>
         <p>Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-        <div class="space10"></div>
-        <a href="#" class="btn">See All Prices</a>
       </div>
       <!--/column -->
       <div class="space70 d-none d-md-block d-lg-none"></div>
@@ -319,7 +317,7 @@
                 <div class="panel-body">
                   <table class="table">
                     <tr>
-                      <td><strong>Active</strong> Coaching </td>
+                      <td><strong>USP</strong> Strategy </td>
                     </tr>
                     <tr>
                       <td><strong>5 year</strong> plan development </td>
@@ -362,6 +360,9 @@
                     </tr>
                     <tr>
                       <td><strong>Participate</strong> Events </td>
+                    </tr>
+                    <tr>
+                      <td><strong>Monthly</strong> Feedback </td>
                     </tr>
 
 
@@ -453,7 +454,7 @@
             <!-- /.card-header -->
             <div id="accordion-collapse-1-1" class="collapse show" aria-labelledby="accordion-heading-1-1" data-parent="#accordion-1">
               <div class="card-body">
-                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                <p>Do you have a startup or a brilliant idea and are you looking for funding? Apply to the NextCycle community and allow us to accelerate your startup, connect you with a network of professional coaches and attract private investors.</p>
               </div>
               <!-- /.card-body -->
 
@@ -477,7 +478,7 @@
             <!-- /.card-header -->
             <div id="accordion-collapse-1-2" class="collapse" aria-labelledby="accordion-heading-1-2" data-parent="#accordion-1">
               <div class="card-body">
-                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                <p>Do you have an ambition for startups? Are you an expert in a specific field that can be of added value for entrepreneurs and investors? Join the NextCycle community and become a startup coach!</p>
               </div>
               <!-- /.card-body -->
               <div><a href="#" class="btn btn-white btn-s ml-4 mb-4" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
@@ -494,7 +495,7 @@
             <!-- /.card-header -->
             <div id="accordion-collapse-1-3" class="collapse" aria-labelledby="accordion-heading-1-3" data-parent="#accordion-1">
               <div class="card-body">
-                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                <p>Are you interested in funding startups? Are you looking for a reliable partner when it comes to managing investments, reporting progress and asessing investment opportunities? Join the NextCycle investor community!</p>
               </div>
               <!-- /.card-body -->
               <div><a href="#" class="btn btn-white btn-s ml-4 mb-4" data-toggle="modal" data-target="#modal-03">Contact us</a></div>
