industries id tags

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
                   <h5>Next Mobility</h5>
                   <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo odio. Cum sociis natoque penatibus magnis dis.</p>
-                  <a href="#" class="btn btn-s btn-blue">Read More</a>
+                  <a href="industries.html#next-mobility" class="btn btn-s btn-blue">Read More</a>
                 </div>
                 <!--/.box -->
               </div>
@@ -155,7 +155,7 @@
                   <h5>Next Energy
                   </h5>
                   <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo odio. Cum sociis natoque penatibus magnis dis.</p>
-                  <a href="#" class="btn btn-s btn-orange">Read More</a>
+                  <a href="industries.html#next-energy" class="btn btn-s btn-orange">Read More</a>
                 </div>
                 <!--/.box -->
               </div>
@@ -167,7 +167,7 @@
                   <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
                   <h5>Next Food</h5>
                   <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo odio. Cum sociis natoque penatibus magnis dis.</p>
-                  <a href="#" class="btn btn-s btn-rose">Read More</a>
+                  <a href="industries.html#next-food" class="btn btn-s btn-rose">Read More</a>
                 </div>
                 <!--/.box -->
               </div>
@@ -178,7 +178,7 @@
                   <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
                   <h5>Next Living</h5>
                   <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo odio. Cum sociis natoque penatibus magnis dis.</p>
-                  <a href="#" class="btn btn-s btn-green">Read More</a>
+                  <a href="industries.html#next-living" class="btn btn-s btn-green">Read More</a>
                 </div>
                 <!--/.box -->
               </div>
