--- a/industries.html
+++ b/industries.html
@@ -117,7 +117,7 @@
       </div>
 
 
-          <div class="wrapper white-wrapper">
+          <div class="wrapper white-wrapper" id="next-mobility">
             <div class="container inner">
               <div class="row align-items-center">
                 <div class="col-lg-6 play-wrapper light-gallery-wrapper text-center">
@@ -145,7 +145,7 @@
           </div>
           <!-- /.wrapper -->
 
-          <div class="wrapper light-wrapper">
+          <div class="wrapper light-wrapper" id="next-energy">
             <div class="container inner">
               <div class="row align-items-center">
                
@@ -176,7 +176,7 @@
           </div>
           <!-- /.wrapper -->
 
-          <div class="wrapper white-wrapper">
+          <div class="wrapper white-wrapper" id="next-food">
             <div class="container inner">
               <div class="row align-items-center">
                 <div class="col-lg-6 play-wrapper light-gallery-wrapper text-center">
@@ -205,7 +205,7 @@
           </div>
           <!-- /.wrapper -->
 
-          <div class="wrapper light-wrapper">
+          <div class="wrapper light-wrapper" id="next-living">
             <div class="container inner">
               <div class="row align-items-center">
                
