--- a/community/capss-infusion.html
+++ b/community/capss-infusion.html
@@ -164,12 +164,12 @@
             </div> -->
             <!--/.row -->
 
-            <!-- <p>Strenghts/ Weaknesses</p> -->
-            <!-- <span class="badge badge-pill badge-success">Development</span>
+            <p>Strenghts/ Weaknesses</p>
+            <span class="badge badge-pill badge-success">Development</span>
             <span class="badge badge-pill badge-success">Marketing</span>
             <span class="badge badge-pill badge-success">Support</span>
             <span class="badge badge-pill badge-warning">Networking</span>
-            <span class="badge badge-pill badge-danger">Sales</span> -->
+            <span class="badge badge-pill badge-danger">Sales</span>
             
 
 
