innovation cycle text

--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
             <div class="align-self-center">
               <h3>The Innovation Cycle</h3>
               <div class="space10"></div>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit.</p>
-              
+              <p>Innovation is the process of creating better solutions to meet new challenges. This process starts with an idea, but involves way more than that. Think about prototyping, networking, planning, developing a business model, implementation and deployment. And it's not a race to the finishline, it is an iterative process which requires constant attention. Are you ready for the Innovation Cycle?</p>              
             </div>
           <!-- /.box -->
         </div>
@@ -294,7 +293,7 @@
         <h2 class="title-color color-gray">Our Services</h2>
         <h3 class="display-3">Don't miss out on the Next Innovation and Investment Cycle by making use of the services that we offer.</h3>
         <div class="space20"></div>
-        <p>Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+        <!-- <p>Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p> -->
       </div>
       <!--/column -->
       <div class="space70 d-none d-md-block d-lg-none"></div>
