Update text innov and invest cycles index.html

--- a/index.html
+++ b/index.html
@@ -189,11 +189,10 @@
                 <div class="align-self-center">
                   <h3>The Innovation Cycle</h3>
                   <div class="space10"></div>
-                  <p>Innovation is the process of creating better solutions to meet new challenges. This process starts
-                    with an idea, but involves way more than that. Think about prototyping, networking, planning,
-                    developing a business model, implementation and deployment. And it's not a race to the finishline,
-                    it is an iterative process which requires constant attention. Are you ready for the Innovation
-                    Cycle?</p>
+                  <p>Innovation is not a race to the finishline. It is an iterative process which requires constant attention. Innovation is never a 
+                    straight line, but always requires you to jump into the next phase. This asks for accurate planning, monitoring progress, 
+                    taking action and adding value. In the end, it's not about ideas, it is about making ideas happen. Are you ready for the Next Innovation Cycle?
+</p>
                 </div>
                 <!-- /.box -->
               </div>
@@ -220,9 +219,12 @@
                   <div class="align-self-center">
                     <h3>The Investment Cycle</h3>
                     <div class="space10"></div>
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo
-                      odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque
-                      nisl consectetur et. Maecenas sed diam eget risus varius blandit sit.</p>
+                    <p>Getting funded is crucial for a startup, it is the fuel that makes it possible to take the startup to the next level. However, next to receiving
+                      the investment, it is also important to see what else the private investor can bring to the table. There must be a good match between what
+                      the startup is looking for and what the investor can bring.
+                      On the other side, for the private investor it can also be challenging to find the right startup to invest in. Having a good match is also important 
+                      here and not having to worry about monitoring progress after the investment was made. Are you ready for the Next Investment Cycle?
+                    </p>
 
                   </div>
                 </div>
