industries -> impact areas

--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
 
             </li>
 
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="industries.html">Industries</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="impact-areas.html">Impact Areas</a>
               <ul class="dropdown-menu">
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-mobility">Next
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-mobility">Next
                     Mobility</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-energy">Next
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-energy">Next
                     Energy</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-food">Next
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-food">Next
                     Food</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-living">Next
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-living">Next
                     Living</a>
 
                 </li>
@@ -107,7 +107,7 @@
       <div class="container inner">
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
-            <h2 class="section-title larger text-center">Our industries</h2>
+            <h2 class="section-title larger text-center">Our Impact Areas</h2>
             <div class="space30"></div>
             <h1 class="display-4 text-center">The full service we are offering is specifically designed to your
               sustainable business area.</h1>
@@ -124,7 +124,7 @@
               <h5>Next Mobility</h5>
               <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
                 odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="industries.html#next-mobility" class="btn btn-s btn-blue">Read More</a>
+              <a href="impact-areas.html#next-mobility" class="btn btn-s btn-blue">Read More</a>
             </div>
             <!--/.box -->
           </div>
@@ -136,7 +136,7 @@
               </h5>
               <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
                 odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="industries.html#next-energy" class="btn btn-s btn-orange">Read More</a>
+              <a href="impact-areas.html#next-energy" class="btn btn-s btn-orange">Read More</a>
             </div>
             <!--/.box -->
           </div>
@@ -149,7 +149,7 @@
               <h5>Next Food</h5>
               <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
                 odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="industries.html#next-food" class="btn btn-s btn-rose">Read More</a>
+              <a href="impact-areas.html#next-food" class="btn btn-s btn-rose">Read More</a>
             </div>
             <!--/.box -->
           </div>
@@ -161,7 +161,7 @@
               <h5>Next Living</h5>
               <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo
                 odio. Cum sociis natoque penatibus magnis dis.</p>
-              <a href="industries.html#next-living" class="btn btn-s btn-green">Read More</a>
+              <a href="impact-areas.html#next-living" class="btn btn-s btn-green">Read More</a>
             </div>
             <!--/.box -->
           </div>
