--- a/about.html
+++ b/about.html
@@ -45,21 +45,21 @@
 
             </li>
 
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="industries.html">Industries</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="impact-areas.html">Impact Areas</a>
               <ul class="dropdown-menu">
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-mobility">Next
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-mobility">Next
                     Mobility</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-energy">Next
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-energy">Next
                     Energy</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-food">Next
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-food">Next
                     Food</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-living">Next
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-living">Next
                     Living</a>
 
                 </li>
