--- a/community/ez360.html
+++ b/community/ez360.html
@@ -40,18 +40,18 @@
 
             </li>
 
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="../industries.html">Industries</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="../impact-areas.html">Impact Areas</a>
               <ul class="dropdown-menu">
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../industries.html#next-mobility">Next Mobility</a>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-mobility">Next Mobility</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../industries.html#next-energy">Next Energy</a>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-energy">Next Energy</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../industries.html#next-food">Next Food</a>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-food">Next Food</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../industries.html#next-living">Next Living</a>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="../impact-areas.html#next-living">Next Living</a>
 
                 </li>
 
