--- a/impact-areas.html
+++ b/impact-areas.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="style/images/favicon.png">
-  <title>NextCycle | Industries</title>
+  <title>NextCycle | Impact Areas</title>
   <link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style/css/plugins.css">
   <link rel="stylesheet" type="text/css" href="style/revolution/css/settings.css">
@@ -40,18 +40,18 @@
   
               </li>
   
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="industries.html">Industries</a>
+              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="impact-areas.html">Impact Areas</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-mobility">Next Mobility</a>
+                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-mobility">Next Mobility</a>
   
                   </li>
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-energy">Next Energy</a>
+                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-energy">Next Energy</a>
   
                   </li>
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-food">Next Food</a>
+                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-food">Next Food</a>
   
                   </li>
-                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-living">Next Living</a>
+                  <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="impact-areas.html#next-living">Next Living</a>
   
                   </li>
   
@@ -77,7 +77,7 @@
       <div class="wrapper image-wrapper bg-image page-title-wrapper inverse-text" data-image-src="style/images/nextcycle/industries.jpg">
         <div class="container inner text-center">
           <div class="space90"></div>
-          <h1 class="page-title">Industries</h1>
+          <h1 class="page-title">Impact Areas</h1>
           <p class="lead">Green solutions for a better world.</p>
         </div>
         <!-- /.container -->
