zinnetje onder impact areas

--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
           <div class="col-lg-8 offset-lg-2">
             <h2 class="section-title larger text-center">Our Impact Areas</h2>
             <div class="space30"></div>
-            <h1 class="display-4 text-center">The full service we are offering is specifically designed to your
-              sustainable business area.</h1>
+            <h1 class="display-4 text-center">Our focus lies on mature startups, active within one of these 4 impact areas.</h1>
             <div class="space30"></div>
           </div>
           <!-- /column -->
